removed useless option from start scripts